# clay-callrates

./: README.md  README_FACTORY.md  call_rates_app.py  demo.py  demo_factory.py  demo_factory_output.csv  example.xlsx  main.py  main_factory.py  pyproject.toml  requirements.txt  run_factory.py
factory/: README_FACTORY.md  __init__.py  call_rates_app.py  data_processors.py  demo_factory.py  file_readers.py  main_factory.py  observers.py
tests/: __init__.py  test_csv_reading.py  test_data_processing.py  test_excel_reading.py  test_integration.py
