[project]
name = "clay-callrates"
version = "0.1.0"
description = "Call rate analysis and processing tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "easygui>=0.98.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]
